--- a/tic-tac-toe - cells/styles.css
+++ b/tic-tac-toe - cells/styles.css
@@ -21,6 +21,9 @@ body{
     align-items: center;
     font-family: 'Poppins', sans-serif;
 }
+main{
+    margin: 30px 0;
+}
 
 .table{
     display: grid;
@@ -38,6 +41,54 @@ body{
     font-weight: 400;
     font-size: 50px;
     cursor: pointer;
+}
+
+.game-info{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    color: #fff;
+    gap: 10px;
+    width: 300px;
+    margin-bottom: 10px;
+}
+
+.game-info-item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    background-color: var(--dark-blue);
+    height: 50px;
+    font-size: large;
+    font-weight: 500;
+}
+
+#reset-icon{
+    background-image: url("reset.svg");
+    background-repeat: no-repeat;
+    background-size: 22px;
+    background-position: center;
+}
+
+.score-info{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    width: 300px;
+    margin-top: 10px;
+}
+
+.score-item{
+    background-color: #5e5ef5;
+    border-radius: 10px;
+    height: 78px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    font-size: large;
+    font-weight: 500;
+    color: #fff;
 }
 
 .o::after{
@@ -94,10 +145,17 @@ body{
         width: 350px;
         height: 350px;
     }
+    .game-info, .score-info{
+        width: 350px;
+        font-size: larger;
+    }
 }
 @media screen and (min-width: 576px) {
     .table{
         width: 380px;
         height: 380px;
+    }
+    .game-info, .score-info{
+        width: 380px;
     }
 }
