--- a/tic-tac-toe - cells/styles.css
+++ b/tic-tac-toe - cells/styles.css
@@ -99,7 +99,7 @@ main{
     align-items: center;
     border-radius: 10px; 
     content: 'o';
-    color: #5e5ef5;
+    color: var(--primary-color);
     animation: changeSize .15s, changeBg 1s, changeBorder .4s;
 }
 
@@ -123,7 +123,7 @@ main{
     }
 }
 
-@keyframes changeBg {
+@keyframes changeBg { 
     from{
         background-color: #5e5ef5;
         color: #fff;
@@ -139,6 +139,39 @@ main{
     }
 }
 
+.cell-winner{
+    background-color: var(--primary-color);
+    color: #fff;
+    transition: background-color .3s;
+}
+
+.winner-message{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    width: 100%;
+    height: 0px;
+    background-color: var(--very-dark-blue);
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: height .4s ;
+    overflow: hidden;
+    font-size: large;
+    cursor: pointer;
+}
+
+.winner-message-active{
+    height: 200px;
+}
+
+#winner-text{
+    font-size: 70px;
+    font-weight: 400;
+}
 
 @media screen and (min-width: 375px) {
     .table{
